Fixed title text overlapping on narrow screens

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input {
 h1 {
     color: #ffffff;
     font-family: 'Raleway', sans-serif;
-    font-size: 62px;
+    font-size: min(62px, 9vw);
     font-weight: 800;
     line-height: 72px;
     margin: 0 auto 3vh;
